# passwordObscurer

./: CMakeLists.txt  dialogo.cpp  dialogo.h  hashlist.txt  interface.glade  main.cpp  pObscurer.py  passwordObscurer
